@@ -318,9 +318,9 @@ esac
 if test "${ac_cv_header_sys_soundcard_h}" = "yes" || \
     test "${ac_cv_header_machine_soundcard_h}" = "yes"; then
     if test "${enable_oss}" != "no" && test -z "$is_win32"; then
-	DRIVERS="${DRIVERS} oss_seq.o oss_mix.o"
+	DRIVERS="${DRIVERS} oss_seq.o oss.o"
 	AC_DEFINE(DRIVER_OSS_SEQ)
-	AC_DEFINE(DRIVER_OSS_MIX)
+	AC_DEFINE(DRIVER_OSS)
     fi
 fi 
 
@@ -329,7 +329,7 @@ if test "${ac_cv_header_alsa_asoundlib_h}" = "yes"; then
     if test "${enable_alsa}" != "no"; then
 	LIBS="${LIBS} -lasound"
 	DRIVERS="${DRIVERS} alsa.o"
-	AC_DEFINE(DRIVER_ALSA_MIX)
+	AC_DEFINE(DRIVER_ALSA)
     fi])
 else
     if test "${enable_alsa}" = "yes"; then
@@ -502,7 +502,7 @@ openbsd*)
     if test "${ac_cv_header_sndio_h}" = "yes"; then
 	DRIVERS="${DRIVERS} sndio.o"
 	AC_DEFINE(DRIVER_SNDIO)
-    else if test "${ac_cv_header_sys_audio_h}" = "yes"; then
+    elif test "${ac_cv_header_sys_audio_h}" = "yes"; then
 	DRIVERS="${DRIVERS} openbsd.o"
 	AC_DEFINE(DRIVER_OPENBSD)
     elif test "${ac_cv_header_sys_audioio_h}" = "yes"; then
